# Eulero

./: CMakeLists.txt  README.md  equationdata.cpp  equationdata.h  euleroperator.cpp  euleroperator.h  eulerproblem.cpp  eulerproblem.h  inputfile.prm  inputfile_2Driemann.prm  inputfile_DMR.prm  inputfile_bstep.prm  inputfile_cylinder.prm  inputfile_fstep.prm  inputfile_sod.prm  main.cpp  operations.h  parameters.cpp  parameters.h
build_Eulero/2D_RIEMANN/results_FILTER/: solution_000.vtu  solution_001.vtu
build_Eulero/2D_RIEMANN/results_TVB/: solution_000.vtu  solution_001.vtu  solution_002.vtu  solution_003.vtu  solution_004.vtu  solution_005.vtu  solution_006.vtu  solution_007.vtu  solution_008.vtu  solution_009.vtu  solution_010.vtu  solution_011.vtu  solution_012.vtu  solution_013.vtu  solution_014.vtu  solution_015.vtu  solution_016.vtu  solution_017.vtu  solution_018.vtu  solution_019.vtu  solution_020.vtu  solution_021.vtu  solution_022.vtu  solution_023.vtu  solution_024.vtu  solution_025.vtu  solution_026.vtu  solution_027.vtu  solution_028.vtu  solution_029.vtu  solution_030.vtu  solution_031.vtu  solution_032.vtu  solution_033.vtu  solution_034.vtu  solution_035.vtu  solution_036.vtu  solution_037.vtu  solution_038.vtu  solution_039.vtu  (+12 more)
build_Eulero/DMR/results_FILTER/: info  solution_000.vtu  solution_001.vtu  solution_002.vtu  solution_003.vtu  solution_004.vtu  solution_005.vtu  solution_006.vtu  solution_007.vtu  solution_008.vtu  solution_009.vtu  solution_010.vtu  solution_011.vtu  solution_012.vtu  solution_013.vtu  solution_014.vtu  solution_015.vtu  solution_016.vtu  solution_017.vtu  solution_018.vtu  solution_019.vtu  solution_020.vtu  solution_021.vtu  solution_022.vtu  solution_023.vtu  solution_024.vtu  solution_025.vtu  solution_026.vtu  solution_027.vtu  solution_028.vtu  solution_029.vtu  solution_030.vtu  solution_031.vtu  solution_032.vtu  solution_033.vtu  solution_034.vtu  solution_035.vtu  solution_036.vtu  solution_037.vtu  solution_038.vtu  (+2 more)
build_Eulero/DMR/results_FILTER_refine/: info  solution_000.vtu  solution_001.vtu  solution_002.vtu  solution_003.vtu  solution_004.vtu  solution_005.vtu  solution_006.vtu  solution_007.vtu  solution_008.vtu  solution_009.vtu  solution_010.vtu  solution_011.vtu  solution_012.vtu  solution_013.vtu  (+27 more)
(+1014 files in other folders)
